--- a/index.html
+++ b/index.html
@@ -1,7 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>My Projects</title>
+<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Testing ...</p>
+<!-- Main Container -->
+<div class="container"> 
+  <!-- Header -->
+  <header class="header">
+    <h4 class="logo">My GitHub Projects</h4>
+  </header>
+  <!-- Hero Section -->
+  <section class="intro">
+    <div class="column">
+    <img src="images/profile.jpg" alt="" class="profile"> <h3>Mohammad Sa</h3> </div>
+    <div class="column2">
+      <p>A lover of programming </p>
+    </div>
+  </section>
+  <!-- Stats Gallery Section -->
+  <div class="gallery">
+    <div class="thumbnail"> <img src="images/hd.png" alt="" width="2000" class="cards"/></a>
+      <h4>HotDoG Kernel for kiwi</h4>
+      <p class="tag">C , ...</p>
+      <div class="abc" style="text-align: left;">
+        <p>&nbsp;</p>
+        <p><font color="#b3b3b3">A kernel based on stock kernel with some new features and optimizations ...</font></p>
+      </div>
+      <a href="https://forum.xda-developers.com/honor-5x/development/kernel-hotdog-2-0-1-t3544887/post70725278#post70725278" class="button">More info</a>
+    </div>
+    <div class="thumbnail"> <img src="images/hdapp.png" alt="" width="2000" class="cards"/></a>
+      <h4>HotDog App</h4>
+      <p class="tag">Java , ...</p>
+      <div class="abc" style="text-align: left;">
+        <p>&nbsp;</p>
+        <p><font color="#b3b3b3">An app designed for HotDog kernel for showing some useful informations ...</font></p>
+      </div>
+      <a href="https://forum.xda-developers.com/honor-5x/development/kernel-hotdog-2-0-1-t3544887/post70725278#post70725278" class="button">More info</a>
+    </div>
+  </div>
+  
+  <!-- Footer Section -->
+  <footer id="contact">
+    <p class="hero_header">GET IN TOUCH WITH ME</p>
+    <div class="tele"> <a href="https://t.me/mohammadsa9"><img src="images/tele.png" alt="" width="80" class="tt"/></a>
+  </footer>
+  <!-- Copyrights Section -->
+  <div class="copyright">&copy;2017 - MohammadSa9</div>
+</div>
+<!-- Main Container Ends -->
 </body>
 </html>
